# Cache_sim

./: .gitignore  CMakeLists.judge  CMakeLists.txt  LICENSE  LRU.cpp  README.md  cache.cpp  cache.hpp  main.cpp  test.sh
TestData/: cache.data  cache1.cfg  cache1.json  cache2.cfg  cache2.json  cache3.cfg  cache3.json  cache4.cfg  cache4.json  ls.trace
config/: cache1.json  cache2.json  cache4.json
include/: argparse.hpp
src/: CMakeLists.txt  argparse.hpp  base_cache.cpp  base_cache.hpp  cache.cpp  cache.hpp  cache_parser.cpp  cache_parser.hpp  cache_setting.hpp  config_parser.cpp  config_parser.hpp  datatype.hpp  loader.cpp  loader.hpp  main.cpp  main_cache.cpp  main_cache.hpp  simulator.cpp  simulator.hpp  vicitm_cache.cpp  victim_cache.hpp
src/deprecated/: cache_setting.hpp
